[tool.poetry]
name = "qualiti"
version = "0.1.0"
description = "Qualiti.ai Python Tools"
authors = ["Carlos Kidman <ckidman@qualiti.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8.12, <4.0"
python-dotenv = "^1.0.0"
asyncio = "^3.4.3"
transformers = { extras = ["agents"], version = "^4.29.2" }
datasets = "^2.12.0"
sentence-transformers = "^2.2.2"
typer = { version = "^0.9.0", extras = ["all"] }
openai = "^0.28.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
black = "^23.3.0"
poethepoet = "^0.19.0"
pytest-asyncio = "^0.21.0"

[tool.black]
line-length = 160

[tool.poetry.scripts]
qualiti = "qualiti.cli:app"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
test = { cmd = "pytest tests", help = "Run all tests" }
